css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
    --filter-bd-color: #D9D9D9;
}

.fa-solid {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
}

.main-container {
    /* width: 100%; */
    display: flex;
    flex-direction: column;
    gap: 35px;
    margin: 0 auto;
    box-sizing: border-box;
}

main {
    width: 100%;
    padding: 0 50px;
}

h1, h2 {
    font-weight: 700;
    font-size: 22px;
}

p {
    font-size: 16px;
}

a {
    color: inherit;
    text-decoration: none;
}

header {
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 79px;
    gap: 10px;
    padding: 20px 0;
    box-sizing: border-box;
}

.logo {
    height: 19px;
    padding: 0 50px;
}

nav ul {
    list-style: none;
    display: flex;
    gap: 68px;
    width: 344;
    height: 35;
    left: 1096px;
    opacity: 1;
    gap: 68px;
    padding: 0 50px;
}

nav a:hover {
    padding-top: 15px;
    border-top: 3px solid var(--main-color);
}

nav a:hover,
nav a:active {
    color: var(--main-color);
}

main {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 35px;
    padding: 0 50px;
}

.section-title {
    height: 53px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    /* remove the default inline display and set the image to cover the card */
    display: block;
    width: 100%;
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color);
}

/****** main title, search and filters, info ***********/

.main-title-search-filter {
    display: flex;
    flex-direction: column;
    gap: 35px;
}

.main-title {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.main-title p {
    height: 18px;
}

/****** search ***********/

.search {
    width: 377px;
    height: 49px;
    opacity: 1;
    border-radius: 15px;
}

.search form {
    display: flex;
    align-items: center;
}

.marker {
    display: flex;
    width: 50px;
    height: 49px;
    background-color: var(--main-bg-color);
    border: 1px solid var(--main-bg-color);
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}

.marker i {
    width: 14px;
    height: 18px;
    padding: 15px 18px;
}

.search input {
    height: 49px;
    border-top: 1px solid var(--main-bg-color);
    border-bottom: 1px solid var(--main-bg-color);
    border-left: none;
    border-right: none;
    padding: 0 10px;
}

.search button {
    width: 132px;
    height: 49px;
    font-size: 18px;
    font-weight: 700;
    color: white;
    background-color: var(--main-color);
    border: 1px solid var(--main-color);
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    padding: 15px 16px;
}

/****** filters ***********/

.filter form {
    display: flex;
    flex-direction: row;
    gap: 15px;
}
.filter form p {
    font-size: 18px;
    font-weight: 700;
}
.filter form button {
    display: flex;
    align-items: center;
    gap: 8px;   
    height: 50px;
    font-size: 17px;
    font-weight: 700;
    background-color: white;
    border: 2px solid var(--filter-bd-color);
    border-radius: 25px;
    padding: 4px 19px;
}

filter-button:active {
    background-color: var(--filter-bd-color);
}

.filter-button img {
    width: 22px;
    height: 22px;
}   

/****** info ***********/

.info {
    display: flex;
    align-items: center;
    gap: 10px;
}

.info img {
    width: 24px;
    height: 24px;
}

.info p {
    font-size: 16px;
}

/****** accommodations And Populars ***********/

.accommodations-and-populars {
    display: flex;
    flex-direction: row;
    gap: 40px;
    width: 100%;
    min-width: 0;
}

.accommodations-and-populars section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** accommodations ***********/

.accommodations {
    width: 65%;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.accommodations ul {
    list-style: none;
    padding-left: 0;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 15px;
    row-gap: 30px;
}

.accommodations .card {
    height: 207.25px;
    gap: 4px;
    opacity: 1;
    padding-bottom: 15px;
    border-radius: 20px;
}

.accommodations .card img {
    width: 100%;
    height: 124px;
    opacity: 1;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.accommodations .card-content {
    display: flex;
    flex-direction: column;
    gap: 4px;
    padding: 0 15px;
}

.accommodations .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.accommodations .card-rating {
    margin-bottom: 5px;
}

.see-more {
    font-size: 18px;
    font-weight: 700;
}

/****** Populars ***********/

.populars {
    width: 32%;
}

.populars-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populars-cards .card {
    display: flex;
    margin-top: 33px;
}

.populars-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populars-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populars-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populars-cards .card-rating {
    margin-bottom: 5px;
}

/****** activities ***********/

.activities {
    display: flex;
    flex-direction: column ;
    gap: 30px;
    width: 100%;
    height: 559.0187377929688px;
    padding: 30px;
}

.activities ul {
    max-width: 100%;
    list-style: none;
    margin: 0 0 0 0;
    padding-left: 0;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 15px;
}

.activities ul .card {
    width: 100%;
    max-height: 439px;
    border-radius: 20px;
}
.activities ul li .card img {
    width: 100%;
    height: 380px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.activities ul li p {
    display: flex;
    font-weight: 700;
    padding: 20px 19px;
    border-bottom-right-radius: 20px;
    border-bottom-left-radius: 20px;
}

/****** footer ***********/

footer {
    height: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 10px;
    padding: 0 20px;
    margin: 0 50px;
    background-color: var(--main-bg-color);
}

footer div {
    display: flex;
    flex-direction: column;
    gap: 15px;
    padding: 20px 20px 0 20px;
}

footer div p {
    font-size: 18px;
    font-weight: 700;
}


/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
@media (max-width: 1440px) and (min-width: 1024px) {

    .main-container {
        max-width: 1440px;
    }


    .accommodations ul {
        column-gap: 10px;
    }

    .section-title, 
    .activities {
        width: 100%; 
        margin-left: 0;
        margin-right: 0;
    }

    .activities ul {
        column-gap: 20px;
    }

    .activities ul .card {
        width: 100%;
    }

    footer {
        max-width: 1340px;
    }
}

/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {

    .main-container {
        max-width: 1024px;
    }

    main {
        width: 100%;
    }

    .accommodations-and-populars {
        display: flex;
        flex-direction: column;
        gap: 40px;
        width: 100%;
    }

    .accommodations {
        width: 100%;
    }

    .populars {
        width: 100%;
        margin-top: 50px;
    }

    .populars-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populars-cards a {
        width: 30%;
    }

    .populars-cards .card-title {
        font-size: 14px;
    }

    .populars-cards .card-subtitle {
        font-size: 13px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    /* ... */
}

